--- a/atmpt2.css
+++ b/atmpt2.css
@@ -972,8 +972,8 @@ body {
   .title-info-animated {
     align-items: center !important;
     text-align: center !important;
-    padding: 0 50px 50px 0;
-    margin: 0 !important;
+    padding: 0;
+    margin: 0 50px 50px 0 !important;
     width: 100%;
   }
   .title-image-glow {
